--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,28 +1,67 @@
-# This workflow will build a .NET project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
-
-name: .NET
+# This workflow will build, test, and create releases for a .NET project
+name: .NET Build and Release
 
 on:
   push:
     branches: [ "main" ]
+    tags:
+      - 'v*'  # Run workflow on version tags, e.g. v1.0.0
   pull_request:
     branches: [ "main" ]
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
-
+    runs-on: self-hosted  # Use your Raspberry Pi runner
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0  # This is important for versioning
+    
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
+    
     - name: Restore dependencies
       run: dotnet restore
+    
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build --no-restore --configuration Release
+    
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test --no-build --configuration Release --verbosity normal
+    
+    - name: Publish
+      run: dotnet publish --no-build --configuration Release --output ./publish
+    
+    - name: Upload build artifacts
+      uses: actions/upload-artifact@v3
+      with:
+        name: app-build
+        path: ./publish
+
+  create-release:
+    needs: build
+    if: startsWith(github.ref, 'refs/tags/v')  # Only run on version tags
+    runs-on: self-hosted  # Use your Raspberry Pi runner
+    steps:
+    - name: Download build artifacts
+      uses: actions/download-artifact@v3
+      with:
+        name: app-build
+        path: ./app-build
+    
+    - name: Zip the build
+      run: |
+        cd ./app-build
+        zip -r ../app-release.zip *
+    
+    - name: Create GitHub Release
+      id: create_release
+      uses: softprops/action-gh-release@v1
+      with:
+        files: app-release.zip
+        name: Release ${{ github.ref_name }}
+        draft: false
+        prerelease: false
+        generate_release_notes: true
