--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: self-hosted  # Use your Raspberry Pi runner
+    runs-on: ubuntu-latest  # Using default GitHub-hosted runner
     steps:
     - uses: actions/checkout@v4
       with:
@@ -43,7 +43,7 @@ jobs:
   create-release:
     needs: build
     if: startsWith(github.ref, 'refs/tags/v')  # Only run on version tags
-    runs-on: self-hosted  # Use your Raspberry Pi runner
+    runs-on: ubuntu-latest  # Using default GitHub-hosted runner
     steps:
     - name: Download build artifacts
       uses: actions/download-artifact@v4
