--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,80 +1,66 @@
-# This workflow will build, test, and create releases for a .NET project
-name: .NET Build and Release
+name: Release to GitHub
 
 on:
   push:
-    branches: [ "main" ]
     tags:
-      - 'v*'  # Run workflow on version tags, e.g. v1.0.0
-  pull_request:
-    branches: [ "main" ]
+      - 'v*'  # Déclenchement sur les tags versionnés (ex: v1.0.0)
 
-# Add permissions needed for creating releases
 permissions:
   contents: write
-  discussions: write
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
+
+    env:
+      MGFXC_WINE_PATH: /home/runner/.winemonogame
+
     steps:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
-    
+
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 8.0.x
-    
-    - name: Restore dependencies
-      run: dotnet restore
-    
-    - name: Build
-      run: dotnet build --no-restore --configuration Release
-    
-    - name: Test
-      run: dotnet test --no-build --configuration Release --verbosity normal
-    
-    - name: Find main project
-      id: find-project
-      run: |
-        PROJECT_FILE=$(find . -name "*.csproj" -type f -not -path "*/obj/*" -not -path "*/bin/*" -not -path "*/test/*" | head -1)
-        echo "Main project file found: $PROJECT_FILE"
-        echo "project-file=$PROJECT_FILE" >> $GITHUB_OUTPUT
-      shell: bash
-    
-    - name: Publish main project
-      run: dotnet publish ${{ steps.find-project.outputs.project-file }} --configuration Release --output ./publish
-    
-    - name: Upload build artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: app-build
-        path: ./publish
+        dotnet-version: '8.0.x'
 
-  create-release:
-    needs: build
-    if: startsWith(github.ref, 'refs/tags/v')
-    runs-on: ubuntu-latest
-    steps:
-    - name: Download build artifacts
-      uses: actions/download-artifact@v4
-      with:
-        name: app-build
-        path: ./app-build
-    
-    - name: Zip the build
+    - name: Get version from tag
       run: |
-        cd ./app-build
-        zip -r ../app-release.zip *
-    
+        TAGVERSION=$(git describe --tags --abbrev=0)
+        echo "TAGVERSION=${TAGVERSION:1}" >> $GITHUB_ENV
+
+    - name: Setup Wine
+      run: |
+        sudo apt update
+        sudo apt install wine64 p7zip-full curl
+        wget -qO- https://raw.githubusercontent.com/MonoGame/MonoGame/78636f8056fa981584e3a2a3e0f22e2efbc43ef8/Tools/MonoGame.Effect.Compiler/mgfxc_wine_setup.sh | sh
+
+    - name: Build Windows
+      run: dotnet publish Platforms/DesktopGL -r win-x64 -c Release --self-contained --output artifacts/windows
+
+    - name: Build macOS
+      run: dotnet publish Platforms/DesktopGL -r osx-x64 -c Release --self-contained --output artifacts/macos
+
+    - name: Build Linux
+      run: dotnet publish Platforms/DesktopGL -r linux-x64 -c Release --self-contained --output artifacts/linux
+
+    - name: Package Builds
+      run: |
+        cd artifacts
+        zip -r windows.zip windows
+        zip -r macos.zip macos
+        zip -r linux.zip linux
+
     - name: Create GitHub Release
       uses: softprops/action-gh-release@v1
       with:
-        files: app-release.zip
-        name: Release ${{ github.ref_name }}
+        files: |
+          artifacts/windows.zip
+          artifacts/macos.zip
+          artifacts/linux.zip
+        name: Release ${{ env.TAGVERSION }}
+        tag_name: v${{ env.TAGVERSION }}
         draft: false
         prerelease: false
         generate_release_notes: true
-        token: ${{ secrets.GITHUB_TOKEN }}
