--- a/BrailleJP/BrailleJP.csproj
+++ b/BrailleJP/BrailleJP.csproj
@@ -37,6 +37,7 @@
 		<PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.2.1105" />
 		<PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.2.1105" />
 		<PackageReference Include="Myra" Version="1.5.9" />
+		<PackageReference Include="SharpHook" Version="5.3.8" />
 		<PackageReference Include="TOWK.Utility.CrossSpeak" Version="1.0.0" />
 	</ItemGroup>
 	<ItemGroup>
@@ -139,7 +140,7 @@
    for example a path to your custom NuGet.config file.
   -->
 		<Target Name="RestoreContentCompiler" Condition=" '$(AutoRestoreMGCBTool)' == 'true' And !Exists ('$(MGCBToolDirectory)$(MGCBCommand)')">
-			<MakeDir Directories="$(MGCBToolDirectory)"/>
+			<MakeDir Directories="$(MGCBToolDirectory)" />
 			<Exec Command="&quot;$(DotnetCommand)&quot; tool install $(MGCBToolAdditionalArguments) dotnet-mgcb --version $(MonoGameVersion) --tool-path ." WorkingDirectory="$(MGCBToolDirectory)" ContinueOnError="true" />
 		</Target>
 
@@ -165,20 +166,14 @@
 				<MonoGameMGCBAdditionalArguments Condition="'$(MonoGameMGCBAdditionalArguments)' == ''">/quiet</MonoGameMGCBAdditionalArguments>
 			</PropertyGroup>
 
-			<Error
-			  Text="The MonoGamePlatform property was not defined in the project!"
-			  Condition="'$(MonoGamePlatform)' == ''" />
+			<Error Text="The MonoGamePlatform property was not defined in the project!" Condition="'$(MonoGamePlatform)' == ''" />
 
-			<Warning
-			  Text="No Content References Found. Please make sure your .mgcb file has a build action of MonoGameContentReference"
-			  Condition="'%(ContentReference.FullPath)' == ''" />
+			<Warning Text="No Content References Found. Please make sure your .mgcb file has a build action of MonoGameContentReference" Condition="'%(ContentReference.FullPath)' == ''" />
 
-			<Warning
-			  Text="Content Reference output directory contains '..' which may cause content to be placed outside of the output directory. Please set ContentFolder on your MonoGameContentReference '%(ContentReference.Filename)' to enforce the correct content output location."
-			  Condition="$([System.String]::Copy('%(ContentReference.ContentDir)').Contains('..'))" />
+			<Warning Text="Content Reference output directory contains '..' which may cause content to be placed outside of the output directory. Please set ContentFolder on your MonoGameContentReference '%(ContentReference.Filename)' to enforce the correct content output location." Condition="$([System.String]::Copy('%(ContentReference.ContentDir)').Contains('..'))" />
 
-			<MakeDir Directories="%(ContentReference.ContentOutputDir)"/>
-			<MakeDir Directories="%(ContentReference.ContentIntermediateOutputDir)"/>
+			<MakeDir Directories="%(ContentReference.ContentOutputDir)" />
+			<MakeDir Directories="%(ContentReference.ContentIntermediateOutputDir)" />
 
 		</Target>
 
@@ -196,21 +191,16 @@
 		<Target Name="RunContentBuilder" DependsOnTargets="RestoreContentCompiler;PrepareContentBuilder">
 
 			<PropertyGroup>
-				<_Command Condition="Exists ('$(MGCBToolDirectory)$(MGCBCommand)')">&quot;$(MGCBToolDirectory)$(MGCBCommand)&quot;</_Command>
+				<_Command Condition="Exists ('$(MGCBToolDirectory)$(MGCBCommand)')">"$(MGCBToolDirectory)$(MGCBCommand)"</_Command>
 				<!-- Fallback to old behaviour this allows people to override $(MGCBCommand) with the mgcb.dll -->
-				<_Command Condition=" '$(_Command)' == '' ">&quot;$(DotnetCommand)&quot; &quot;$(MGCBCommand)&quot;</_Command>
+				<_Command Condition=" '$(_Command)' == '' ">"$(DotnetCommand)" "$(MGCBCommand)"</_Command>
 			</PropertyGroup>
 
 			<!-- Execute MGCB from the project directory so we use the correct manifest. -->
-			<Exec
-			  Condition="'%(ContentReference.FullPath)' != ''"
-			  Command="$(_Command) $(MonoGameMGCBAdditionalArguments) /@:&quot;%(ContentReference.FullPath)&quot; /platform:$(MonoGamePlatform) /outputDir:&quot;%(ContentReference.ContentOutputDir)&quot; /intermediateDir:&quot;%(ContentReference.ContentIntermediateOutputDir)&quot; /workingDir:&quot;%(ContentReference.FullDir)&quot;"
-			  WorkingDirectory="$(MSBuildProjectDirectory)" />
+			<Exec Condition="'%(ContentReference.FullPath)' != ''" Command="$(_Command) $(MonoGameMGCBAdditionalArguments) /@:&quot;%(ContentReference.FullPath)&quot; /platform:$(MonoGamePlatform) /outputDir:&quot;%(ContentReference.ContentOutputDir)&quot; /intermediateDir:&quot;%(ContentReference.ContentIntermediateOutputDir)&quot; /workingDir:&quot;%(ContentReference.FullDir)&quot;" WorkingDirectory="$(MSBuildProjectDirectory)" />
 
 			<ItemGroup>
-				<ExtraContent
-				  Condition="'%(ContentReference.ContentOutputDir)' != ''"
-				  Include="%(ContentReference.ContentOutputDir)\**\*.*">
+				<ExtraContent Condition="'%(ContentReference.ContentOutputDir)' != ''" Include="%(ContentReference.ContentOutputDir)\**\*.*">
 					<ContentDir>%(ContentReference.ContentDir)</ContentDir>
 				</ExtraContent>
 			</ItemGroup>
@@ -229,18 +219,10 @@
       - BundleResource: built content files if MacOSX or iOS
       - Content: built content files for all other platforms
   -->
-		<Target
-		  Name="IncludeContent"
-		  DependsOnTargets="RunContentBuilder"
-		  Condition="'$(EnableMGCBItems)' == 'true' OR '@(MonoGameContentReference)' != ''"
-		  Outputs="%(ExtraContent.RecursiveDir)%(ExtraContent.Filename)%(ExtraContent.Extension)"
-		  BeforeTargets="BeforeBuild">
+		<Target Name="IncludeContent" DependsOnTargets="RunContentBuilder" Condition="'$(EnableMGCBItems)' == 'true' OR '@(MonoGameContentReference)' != ''" Outputs="%(ExtraContent.RecursiveDir)%(ExtraContent.Filename)%(ExtraContent.Extension)" BeforeTargets="BeforeBuild">
 
 			<!-- Call CreateItem on each piece of ExtraContent so it's easy to switch the item type by platform. -->
-			<CreateItem
-			  Include="%(ExtraContent.FullPath)"
-			  AdditionalMetadata="Link=$(PlatformResourcePrefix)%(ExtraContent.ContentDir)%(ExtraContent.RecursiveDir)%(ExtraContent.Filename)%(ExtraContent.Extension);CopyToOutputDirectory=PreserveNewest"
-			  Condition="'%(ExtraContent.Filename)' != ''">
+			<CreateItem Include="%(ExtraContent.FullPath)" AdditionalMetadata="Link=$(PlatformResourcePrefix)%(ExtraContent.ContentDir)%(ExtraContent.RecursiveDir)%(ExtraContent.Filename)%(ExtraContent.Extension);CopyToOutputDirectory=PreserveNewest" Condition="'%(ExtraContent.Filename)' != ''">
 				<Output TaskParameter="Include" ItemName="Content" Condition="'$(MonoGamePlatform)' != 'Android' And '$(MonoGamePlatform)' != 'iOS' And '$(MonoGamePlatform)' != 'MacOSX'" />
 				<Output TaskParameter="Include" ItemName="BundleResource" Condition="'$(MonoGamePlatform)' == 'MacOSX' Or '$(MonoGamePlatform)' == 'iOS'" />
 				<Output TaskParameter="Include" ItemName="AndroidAsset" Condition="'$(MonoGamePlatform)' == 'Android'" />
