fix build actions

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -60,21 +60,21 @@ jobs:
       run: |
         dotnet tool install -g vpk
         vpk download github --repoUrl https://github.com/${{ github.repository }}
-        vpk pack -u BrailleJP.Windows -v ${{ env.SEMVER_VERSION }} -p artifacts/windows
+        vpk pack -u BrailleJP -v ${{ env.SEMVER_VERSION }} -p artifacts/windows
         # Move Velopack files to artifacts directory for uploading
         mkdir -p artifacts/velopack/windows
         cp -r ./releases/* artifacts/velopack/windows/
         
     - name: Create Velopack Release for macOS
       run: |
-        vpk pack -u BrailleJP.macOS -v ${{ env.SEMVER_VERSION }} -p artifacts/macos
+        vpk pack -u BrailleJP -v ${{ env.SEMVER_VERSION }} -p artifacts/macos
         # Move Velopack files to artifacts directory for uploading
         mkdir -p artifacts/velopack/macos
         cp -r ./releases/* artifacts/velopack/macos/
         
     - name: Create Velopack Release for Linux
       run: |
-        vpk pack -u BrailleJP.Linux -v ${{ env.SEMVER_VERSION }} -p artifacts/linux
+        vpk pack -u BrailleJP -v ${{ env.SEMVER_VERSION }} -p artifacts/linux
         # Move Velopack files to artifacts directory for uploading
         mkdir -p artifacts/velopack/linux
         cp -r ./releases/* artifacts/velopack/linux/
