--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -79,6 +79,16 @@ jobs:
     - name: Install Velopack
       run: dotnet tool install -g vpk
     
+    # Vérification des noms des exécutables générés
+    - name: Check executable names
+      run: |
+        echo "Exécutables Windows:"
+        find build/windows -type f -executable -o -name "*.exe" | sort
+        echo "Exécutables macOS:"
+        find build/macos -type f -executable | sort
+        echo "Exécutables Linux:"
+        find build/linux -type f -executable | sort
+    
     # Téléchargement des versions précédentes pour delta updates
     - name: Download previous releases
       run: vpk download github --repoUrl https://github.com/${{ github.repository }}
@@ -87,20 +97,47 @@ jobs:
     - name: Create Velopack Release for Windows
       run: |
         mkdir -p artifacts/velopack/windows
-        # Spécifier explicitement le chemin du répertoire d'entrée pour Velopack
-        vpk pack -u BrailleJP -v ${{ env.SEMVER_VERSION }} -p windows -o artifacts/velopack/windows
+        
+        # Trouver le nom de l'exécutable principal (premier .exe trouvé)
+        MAIN_EXE=$(find build/windows -name "*.exe" -type f -print -quit | xargs basename)
+        if [ -z "$MAIN_EXE" ]; then
+          echo "Aucun exécutable .exe trouvé dans build/windows"
+          exit 1
+        fi
+        echo "Exécutable principal Windows trouvé : $MAIN_EXE"
+        
+        # Utiliser le nom de l'exécutable trouvé avec --mainExe
+        vpk pack -u BrailleJP -v ${{ env.SEMVER_VERSION }} -p windows --basedir build/windows --mainExe "$MAIN_EXE" -o artifacts/velopack/windows
     
     - name: Create Velopack Release for macOS
       run: |
         mkdir -p artifacts/velopack/macos
-        # Spécifier explicitement le chemin du répertoire d'entrée pour Velopack
-        vpk pack -u BrailleJP -v ${{ env.SEMVER_VERSION }} -p macos -o artifacts/velopack/macos
+        
+        # Trouver le nom de l'exécutable principal pour macOS
+        MAIN_EXE=$(find build/macos -type f -executable -not -path "*/\.*" -print -quit | xargs basename)
+        if [ -z "$MAIN_EXE" ]; then
+          echo "Aucun exécutable trouvé dans build/macos"
+          exit 1
+        fi
+        echo "Exécutable principal macOS trouvé : $MAIN_EXE"
+        
+        # Utiliser le nom de l'exécutable trouvé avec --mainExe
+        vpk pack -u BrailleJP -v ${{ env.SEMVER_VERSION }} -p macos --basedir build/macos --mainExe "$MAIN_EXE" -o artifacts/velopack/macos
     
     - name: Create Velopack Release for Linux
       run: |
         mkdir -p artifacts/velopack/linux
-        # Spécifier explicitement le chemin du répertoire d'entrée pour Velopack
-        vpk pack -u BrailleJP -v ${{ env.SEMVER_VERSION }} -p linux o artifacts/velopack/linux
+        
+        # Trouver le nom de l'exécutable principal pour Linux
+        MAIN_EXE=$(find build/linux -type f -executable -not -path "*/\.*" -print -quit | xargs basename)
+        if [ -z "$MAIN_EXE" ]; then
+          echo "Aucun exécutable trouvé dans build/linux"
+          exit 1
+        fi
+        echo "Exécutable principal Linux trouvé : $MAIN_EXE"
+        
+        # Utiliser le nom de l'exécutable trouvé avec --mainExe
+        vpk pack -u BrailleJP -v ${{ env.SEMVER_VERSION }} -p linux --basedir build/linux --mainExe "$MAIN_EXE" -o artifacts/velopack/linux
     
     # Création de la release GitHub
     - name: Create GitHub Release
@@ -118,4 +155,5 @@ jobs:
         draft: false
         prerelease: false
         generate_release_notes: true
+ 
  
