--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,69 +1,57 @@
 name: Release to GitHub
+
 on:
   push:
     tags:
       - 'v*'  # Déclenchement sur les tags versionnés (ex: v1.0.0)
+
 permissions:
   contents: write
+
 jobs:
   build:
     runs-on: ubuntu-22.04
+
     env:
       MGFXC_WINE_PATH: /home/runner/.winemonogame
+
     steps:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
+
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: '8.0.x'
+
     - name: Get version from tag
       run: |
         TAGVERSION=$(git describe --tags --abbrev=0)
         echo "TAGVERSION=${TAGVERSION:1}" >> $GITHUB_ENV
+
     - name: Setup Wine
       run: |
         sudo apt update
         sudo apt install wine64 p7zip-full curl
         wget -qO- https://raw.githubusercontent.com/MonoGame/MonoGame/78636f8056fa981584e3a2a3e0f22e2efbc43ef8/Tools/MonoGame.Effect.Compiler/mgfxc_wine_setup.sh | sh
+
     - name: Build Windows
       run: dotnet publish BrailleJP/BrailleJP.csproj -r win-x64 -c Release --self-contained --output artifacts/windows
+
     - name: Build macOS
       run: dotnet publish BrailleJP/BrailleJP.csproj -r osx-x64 -c Release --self-contained --output artifacts/macos
+
     - name: Build Linux
       run: dotnet publish BrailleJP/BrailleJP.csproj -r linux-x64 -c Release --self-contained --output artifacts/linux
-    - name: Package Standard Builds
+
+    - name: Package Builds
       run: |
         cd artifacts
         zip -r BrailleJP-Windows-${{ env.TAGVERSION }}.zip windows
         zip -r BrailleJP-macOS-${{ env.TAGVERSION }}.zip macos
         zip -r BrailleJP-Linux-${{ env.TAGVERSION }}.zip linux
-    
-    # Add Velopack packaging for all platforms
-    - name: Create Velopack Release for Windows
-      run: |
-        dotnet tool install -g vpk
-        vpk download github --repoUrl https://github.com/${{ github.repository }}
-        vpk pack -u BrailleJP.Windows -v ${{ env.TAGVERSION }} -p artifacts/windows
-        # Move Velopack files to artifacts directory for uploading
-        mkdir -p artifacts/velopack/windows
-        cp -r ./releases/* artifacts/velopack/windows/
-        
-    - name: Create Velopack Release for macOS
-      run: |
-        vpk pack -u BrailleJP.macOS -v ${{ env.TAGVERSION }} -p artifacts/macos
-        # Move Velopack files to artifacts directory for uploading
-        mkdir -p artifacts/velopack/macos
-        cp -r ./releases/* artifacts/velopack/macos/
-        
-    - name: Create Velopack Release for Linux
-      run: |
-        vpk pack -u BrailleJP.Linux -v ${{ env.TAGVERSION }} -p artifacts/linux
-        # Move Velopack files to artifacts directory for uploading
-        mkdir -p artifacts/velopack/linux
-        cp -r ./releases/* artifacts/velopack/linux/
-    
+
     - name: Create GitHub Release
       uses: softprops/action-gh-release@v1
       with:
@@ -71,9 +59,6 @@ jobs:
           artifacts/BrailleJP-Windows-${{ env.TAGVERSION }}.zip
           artifacts/BrailleJP-macOS-${{ env.TAGVERSION }}.zip
           artifacts/BrailleJP-Linux-${{ env.TAGVERSION }}.zip
-          artifacts/velopack/windows/*
-          artifacts/velopack/macos/*
-          artifacts/velopack/linux/*
         name: BrailleJP Release ${{ env.TAGVERSION }}
         tag_name: v${{ env.TAGVERSION }}
         draft: false
