--- a/BrailleJP/LinguaBraille.csproj
+++ b/BrailleJP/LinguaBraille.csproj
@@ -39,6 +39,7 @@
 		<PackageReference Include="Myra" Version="1.5.9" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="Nopipeline.Task" Version="2.3.0" />
+		<PackageReference Include="Octokit" Version="14.0.0" />
 		<PackageReference Include="SharpHook" Version="5.3.8" />
 		<PackageReference Include="TOWK.Utility.CrossSpeak" Version="1.0.0" />
 		<PackageReference Include="Velopack" Version="0.0.1251" />
